# src/models/auth.model.ts
@@ -10,7 +10,6 @@ export interface LoginDTO {
 
 export interface LoginResponseDTO {
   userId: string;
-  credentialId: string;
   token: string;
   refreshToken: string;
 }
