# src/models/jwt.model.ts
@@ -1,6 +1,5 @@
 export interface JwtPayload {
   id: string;
-  credentialId: string;
   roles: string[];
   iat?: number;
   exp?: number;
