# src/routes/credentialRole.routes.ts
@@ -9,6 +9,7 @@ const controller = new CredentialRoleController();
 
 router.post("/", accessMiddleware, authMiddleware, roleMiddleware(['admin']), controller.create);
 router.get("/:credentialId", accessMiddleware, authMiddleware, controller.findByCredential);
+router.get("/roles/credential/:credentialId", accessMiddleware, authMiddleware, controller.findRoleNamesByCredential);
 router.delete("/:credentialId/:roleId", accessMiddleware, authMiddleware, roleMiddleware(['admin']), controller.delete);
 
 export default router;
